move users/find to /admin api
